# Ai-agent

./: .gitignore
2- shell-agent/: main.py  pyproject.toml  תיעוד כשלים ותובנות.docx  תיעוד תרחישי בדיקה.xlsx
2- shell-agent/prompts/: level-1.md  level-2.md  level-3.md
3-rag-project/: README.md  app.py  colors_data.json  pyproject.toml  rag_app.py
