[project]
name = "shell-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.65.0",
    "google-generativeai>=0.8.6",
    "gradio>=6.8.0",
    "groq>=1.0.0",
    "openai>=2.24.0",
    "pip-system-certs>=5.3",
    "python-dotenv>=1.2.1",
    "typer>=0.24.1",
]
